# cheesy

AndroidJniAudio/: Readme.md
AndroidJniAudio/src/: Android.cpp  Android.h  AndroidAudio.cpp  AndroidAudio.h  AndroidSound.cpp  AndroidSound.h  Audio.cpp  Audio.h  Java.cpp  Java.h  Logger.h  Main.cpp  Music.cpp  Music.h  Sound.cpp  Sound.h  Window.cpp  Window.h
AndroidJniAudio/tools/: logcat.bat  logcat_emulator.bat
AndroidNativeAudio/app/: build.gradle
FourWins/: .project
FourWins/src/: FourWins.java
MaturaShooter/: start.bat
MaturaShooter-Ng/: start_editor.bat  start_game.bat
MaturaShooter/proj/: Main.cbp  Main.depend  Main.layout
MaturaShooter/src/: Global.h  Grafik.h  Objekt.h  WinMain.cpp  WinMain.h  dc.cpp  dc.h  dxinit.cpp  dxinit.h  objekt_basis.cpp  objekt_basis.h  particle.cpp  particle.h  sort.cpp  sort.h  sound.h  sprite.cpp  sprite.h  units.cpp  units.h
OpenSLES/: Readme.md
OpenSLES/src/: Main.cpp
SDLTetris/: Thumbs.db
SDLTetris/src/: tetris.depend  tetris.layout
colldet/: CollDet.cbp  CollDet.depend  CollDet.layout  Global.h  Physics.cpp  dxinit.cpp  font.h  main.cpp  physicalmodel.cpp  physicalmodel.hpp  physmath.cpp  renderer.cpp  renderer.h  singleton.h  timer.cpp  timer.h
colldet/dev/: codeproject.txt
colldet/hecker/: Main.cpp
colldet/papers/: blub.txt  collision.html  (+4 more)
jvgs-minimal/src/game/: CMakeLists.txt  Camera.cpp  Camera.h  CollisionResponsePositioner.cpp  CollisionResponsePositioner.h  Entity.cpp  Entity.h  InputController.cpp  InputController.h  Level.cpp  Level.h  LevelManager.cpp
medtest/: kquestions.PAR
(+1604 files in other folders)
